Fix boostrap overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,17 @@
     color: #fff;
     font-size: 80px;
 }
+
+@media screen and (max-width: 580px) {
+
+    .address-container,
+    .copywright-container,
+    .contact-container {
+        margin-left: 20px;
+    }
+
+    .facebook-logo {
+        margin-right: 10px;
+    }
+
+}
